Ingress/hello-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      # purpose: bsc-config-demo
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        # purpose: bsc-config-demo
        app: hello
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operatior: In
                  values:
                  - hello
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:1.0
