Ingress/hello-ingress.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-service
          servicePort: 80
