Ingress/ttc-infra-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ttc-infra
  namespace: ttc-infra
  labels:
    app.kubernetes.io/instance: ttc
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: ttc
    meta.helm.sh/release-namespace: ttc-infra
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
spec:
  rules:
  - host: prometheus.team14.sk-ttc.com
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
        path: /*
  - host: alertmanager.team14.sk-ttc.com
    http:
      paths:
      - backend:
          serviceName: prometheus-alertmanager
          servicePort: 80
        path: /*
  - host: grafana.team14.sk-ttc.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /*
  - host: argocd.team14.sk-ttc.com
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: 80
        path: /*
  - host: gitea.team14.sk-ttc.com
    http:
      paths:
      - backend:
          serviceName: gitea-gitea-http
          servicePort: 3000
        path: /*
  - host: jenkins.team14.sk-ttc.com
    http:
      paths:
      # - backend:
      #     serviceName: ssl-redirect
      #     servicePort: use-annotation
      #   path: /*
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /*
